--- a/CPP03/ex02/Makefile
+++ b/CPP03/ex02/Makefile
@@ -1,10 +1,10 @@
 NAME	=	a.out
 
-SRCS	=	ClapTrap.cpp ScavTrap.cpp main.cpp
+SRCS	=	ClapTrap.cpp ScavTrap.cpp FragTrap.cpp main.cpp
 
 OBJS	= 	${SRCS:%.cpp=%.o}
 
-HEADER	=	ClapTrap.hpp ScavTrap.hpp
+HEADER	=	ClapTrap.hpp ScavTrap.hpp FragTrap.hpp
 
 CC		= c++
 
